vertically align text and fix social links

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -54,16 +54,6 @@
 }
 
 /* ------------------------------------------------------------------ */
-/* Home page profile pic
-/* ------------------------------------------------------------------ */
-.profile-pic {
-   position: relative;
-   width: 120px;
-   height: 120px;
-   border-radius: 100%;
-}
-
-/* ------------------------------------------------------------------ */
 /* About Section
 /* ------------------------------------------------------------------ */
 
@@ -109,6 +99,16 @@
 #about .download .button i {
    margin-right: 15px;
    font-size: 20px;
+}
+
+/* ------------------------------------------------------------------ */
+/* info
+/* ------------------------------------------------------------------ */
+.info {
+	position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
 }
 
 /* ------------------------------------------------------------------ */
